# skillcrafts-test-framework

./: .gitignore  Dockerfile.prod  README.md  api_checklist.csv  doc_util.py  docker-compose.prod.yml  login_checklist.csv  manage.py  pyproject.toml  requirements.txt  work_file.py
.github/workflows/: deploy.yml
skillcrafts_test_framework/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
test_framework/data_factories/: profiles_factory.py
test_framework/data_factories/api/skilcrafts_platform/: profiles_factory.py
test_framework/docs/: test_cases_with_results.md
test_framework/test_design/components/: framework.py  test_docs.py
test_framework/test_design/test_scenarios/: registry.py
test_framework/test_design/test_scenarios/services/: auth.py  profiles.py
test_framework/test_factories/api/: base_mixins.py
test_framework/test_models/api/: base.py  skillcrafts.py
test_platform/: apps.py  models.py  tasks.py  urls.py  views.py
test_platform/migrations/: 0001_initial.py  0002_wikivisitcounter.py
test_platform/static/test_platform/: dashboard.js
test_platform/templates/test_platform/: dashboard.html  wiki_page.html  wiki_tree.html
wiki/: data_factories.md  index.md  markdown_spec.md  test_design.md  test_factories.md  test_models.md
