[project]
name = "skillcrafts-test-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.5",
    "faker>=40.18.0",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
]

[tool.uv.sources]
modules = { path = ".", editable = true }
